<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.hitungMeteran.HitungFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="132dp"
        android:layout_height="132dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namaPelanggan_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/namaPelanggan_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/namaPelanggan" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tipeMeteran_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/namaPelanggan_hint" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tipeMeteran_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipeMeteran" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bulanLalu_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tipeMeteran_hint" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bulanLalu_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bulanLalu" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bulanIni_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/bulanLalu_hint" >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bulanIni_inp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bulanIni" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnHitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/hitung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bulanIni_hint"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtpemakaian"
        android:layout_width="191dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHitung"
        app:layout_constraintVertical_bias="0.171"
        tools:text="Pemakaian: 1500 watt" />

    <TextView
        android:id="@+id/txtpembayaran"
        android:layout_width="250dp"
        android:layout_height="36dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtpemakaian"
        app:layout_constraintVertical_bias="0.166"
        tools:text="Pembayaran: Rp 123.000" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>